Fixed Dark Mode - Added runtime and procfile --> celery and redis configuration needs to be added

--- a/cryptoApi/static/css/currency_page_style.css
+++ b/cryptoApi/static/css/currency_page_style.css
@@ -145,6 +145,9 @@ input:checked + .slider:before {
         margin: auto;
         display: block;
     }
+    .currency-info-section:nth-child(2) {
+        transition:all 1s;
+    }
 
     .currency-info-section:nth-child(3) {
         grid-row-start: 2;
@@ -319,6 +322,7 @@ input:checked + .slider:before {
         font-weight: bold;
         color: rgba(14, 50, 92, 0.6);
         text-align: center;
+        transition:all 1s;
     }
 
     .currency-info-section:nth-child(3) {
@@ -483,6 +487,7 @@ input:checked + .slider:before {
         font-weight: bold;
         color: rgba(14, 50, 92, 0.6);
         text-align: center;
+        transition:all 1s;
     }
 
     .currency-info-section:nth-child(3) {
